--- a/resources/tutorial/resource.cfg
+++ b/resources/tutorial/resource.cfg
@@ -1,6 +1,6 @@
 type: "csharp",
 main: "server/Tutorial/bin/Debug/Tutorial.dll",
-client-main: "client/client.mjs",
+client-main: "client/Debug/Client.dll",
 #client-type: "jsb",
 client-files:[
     client/*
