--- a/server.cfg
+++ b/server.cfg
@@ -11,7 +11,10 @@ language: lt
 description: 'Mano tutorial serveris'
 modules: ['js-module'
 , 'csharp-module']
-resources: ['chat'
+resources: [
+'chat'
 ,'tutorial'
+,'imports/m5e34'
+,'map/baznycia'
 ]
 debug: true
