--- a/resources/tutorial/server/Client/Client.csproj
+++ b/resources/tutorial/server/Client/Client.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AltV.Net.Client" Version="14.0.1" />
+    <PackageReference Include="AltV.Net.Client" Version="15.0.107-dev" />
   </ItemGroup>
 
 </Project>
