--- a/resources/tutorial/server/Tutorial/Tutorial.csproj
+++ b/resources/tutorial/server/Tutorial/Tutorial.csproj
@@ -9,8 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AltV.Net" Version="14.0.1" />
-    <PackageReference Include="AltV.Net.Resources.Chat.Api" Version="14.0.1" />
+    <PackageReference Include="AltV.Net" Version="15.0.107-dev" />
+    <PackageReference Include="AltV.Net.Resources.Chat.Api" Version="15.0.107-dev" />
   </ItemGroup>
 
 </Project>
