--- a/resources/tutorial/server/Client/Client.csproj
+++ b/resources/tutorial/server/Client/Client.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AltV.Net.Client" Version="15.0.179-dev" />
+    <PackageReference Include="AltV.Net.Client" Version="16.0.15" />
   </ItemGroup>
 
 </Project>
