--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ modules/js-module/libnode.so.108
 .server-crashes-cache
 altv-crash-handler
 altv-crash-handler.exe
+resources/tutorial/server/Tutorial/.vs/Tutorial/FileContentIndex/b6d4b031-9cdd-4d5b-b83b-2778e2a67142.vsidx
